--- a/des157a/index.html
+++ b/des157a/index.html
@@ -4,28 +4,79 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
+    <title>Iris Xie's Portal (DES 157a 002 - FQ 2021)</title>
 </head>
-<body>
-    <!--- Banner --> 
 
-    <div>
+<body>
+<header>
+    <h1>
+    </h1>
+    <h2>
+    </h2>
+    <div id="banner">
 
     </div>
-    <!--- Studio --> 
-    <ul>
 
-    </ul>
-    <!--- R & D --> 
-    <ul>
+</header>
+<main>
+    <section>
+        <section id="studios">
+         <h2>Studios</h2>
+         <nav>
+         <ul>
+        <li><a href="#">Learning Journal</a>|</li>
+        <li><a href="#">Mad Libs 2.0</a>|</li>
+       <li><a href="#">Every Picture</a>|</li>
+        <li><a href="#">Game On!</a></li>
+        </ul>
+        <h2>Experiments</h2>
+        <ul>
+        </ul>
+    </nav>
+<   /nav>
+        <h2>Writing</h2>
+        <nav>
+            <ul>
+        <li><a href="">Journal</a></li>
+        </ul>
+        </nav>
 
-    </ul>
+    </section>
 
-     <!--- Final --> 
-    <ul>
+   <section id="R&D">
+    <section>
+        <!--- Research & Development --> 
+       <h2>Research & Development</h2>
+            <nav>
+            <ul>
+            <li><a href="#">Project Brief</a>|</li>
+            <li><a href="#">Digital Comp</a>|</li>
+            <li><a href="#">Refined Comp</a>|</li>
+            <li><a href="#">Prototype 1</a>|</li>
+            <li><a href="#">User Test</a>|</li>
+            <li><a href="#">User Test Results</a>|</li>
+            </ul>
+            </nav>
+    </section>
+<section>
+   <nav>
+    <!--- Final --> 
+   <h2>Final</h2>
+   <ul>
+    <nav>
+   <li><a href="#">Final Project</a>|</li>
+   </ul>
+   </nav>
+</section>
+</main>
 
-    </ul>
+
+<footer>
+    <a href="https://validator.w3.org/check?uri=https://irisxie.github.io/des157a">Valid HTML 5</a>
+    <a href="https://jigsaw.w3.org/css-validator/check/referer">Valid CSS</a>
+<a href="mailto:your-encoded-email">&#105;&#120;&#105;&#101;&#064;&#117;&#099;&#100;&#097;&#118;&#105;&#115;&#046;&#101;&#100;&#117;</a>
+</footer>
 </body>
-
-<a href="https://validator.w3.org/check?uri=referer">Valid HTML</a>
 </html>
