--- a/des157a/index.html
+++ b/des157a/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>    
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <title>Iris Xie's Portal (DES 157a 002 - FQ 2021)</title>
 </head>
@@ -76,7 +79,7 @@
 <footer>
     <a href="https://validator.w3.org/check?uri=https://irisxie.github.io/des157a">Valid HTML 5</a>
     <a href="https://jigsaw.w3.org/css-validator/check/referer">Valid CSS</a>
-<a href="mailto:your-encoded-email">&#105;&#120;&#105;&#101;&#064;&#117;&#099;&#100;&#097;&#118;&#105;&#115;&#046;&#101;&#100;&#117;</a>
+<a href="mailto:ixie@ucdavis.edu">&#105;&#120;&#105;&#101;&#064;&#117;&#099;&#100;&#097;&#118;&#105;&#115;&#046;&#101;&#100;&#117;</a>
 </footer>
 </body>
 </html>
