lots of changes

--- a/des157a/index.html
+++ b/des157a/index.html
@@ -14,24 +14,26 @@
 
 <body>
 <header>
-    <h1>
+    <h1> Iris Xie
     </h1>
-    <h2>
+    <h2> Design 157A - Interactive Media II - Fall 2021
     </h2>
     <div id="banner">
-
+        <div class="stars" id="star1"></div>
+        <div class="stars" id="star2"></div>
+        <div class="stars" id="star3"></div>
     </div>
 
 </header>
-<main>
-    <section>
-        <section id="studios">
+<main >
+    <section class="container">
+        <section>
          <h2>Studios</h2>
          <nav>
          <ul>
-        <li><a href="#">Learning Journal</a>|</li>
-        <li><a href="#">Mad Libs 2.0</a>|</li>
-       <li><a href="#">Every Picture</a>|</li>
+        <li><a href="#">Learning Journal</a></li>
+        <li><a href="#">Mad Libs 2.0</a></li>
+       <li><a href="#">Every Picture</a></li>
         <li><a href="#">Game On!</a></li>
         </ul>
         <h2>Experiments</h2>
@@ -48,28 +50,29 @@
 
     </section>
 
-   <section id="R&D">
-    <section>
+   <section class="container">
         <!--- Research & Development --> 
-       <h2>Research & Development</h2>
+       
             <nav>
-            <ul>
-            <li><a href="#">Project Brief</a>|</li>
-            <li><a href="#">Digital Comp</a>|</li>
-            <li><a href="#">Refined Comp</a>|</li>
-            <li><a href="#">Prototype 1</a>|</li>
-            <li><a href="#">User Test</a>|</li>
-            <li><a href="#">User Test Results</a>|</li>
-            </ul>
+                <ul>
+                    <h2>Research & Development</h2>
+            <li><a href="#">Project Brief</a></li>
+            <li><a href="#">Digital Comp</a></li>
+            <li><a href="#">Refined Comp</a></li>
+            <li><a href="#">Prototype 1</a></li>
+            <li><a href="#">User Test</a></li>
+            <li><a href="#">User Test Results</a></li>
+        </ul>
             </nav>
+        
     </section>
-<section>
+<section class="container">
    <nav>
     <!--- Final --> 
    <h2>Final</h2>
    <ul>
     <nav>
-   <li><a href="#">Final Project</a>|</li>
+   <li><a href="#">Final Project</a></li>
    </ul>
    </nav>
 </section>
