--- a/des157a/index.html
+++ b/des157a/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Koh+Santepheap:wght@900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>    
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
@@ -28,7 +31,7 @@
 <main >
     <section class="container">
         <section>
-         <h2>Studios</h2>
+         <h3>Studios</h3>
          <nav>
          <ul>
         <li><a href="#">Learning Journal</a></li>
@@ -36,12 +39,13 @@
        <li><a href="#">Every Picture</a></li>
         <li><a href="#">Game On!</a></li>
         </ul>
-        <h2>Experiments</h2>
+        <h3>Experiments</h3>
         <ul>
+            <li><a href="#">Exp1</a></li>
         </ul>
     </nav>
 </nav>
-        <h2>Writing</h2>
+        <h3>Writing</h3>
         <nav>
             <ul>
         <li><a href="">Journal</a></li>
@@ -55,7 +59,7 @@
        
             <nav>
                 <ul>
-                    <h2>Research & Development</h2>
+                    <h3>Research & Development</h3>
             <li><a href="#">Project Brief</a></li>
             <li><a href="#">Digital Comp</a></li>
             <li><a href="#">Refined Comp</a></li>
@@ -69,7 +73,7 @@
 <section class="container">
    <nav>
     <!--- Final --> 
-   <h2>Final</h2>
+   <h3>Final</h3>
    <ul>
     <nav>
    <li><a href="#">Final Project</a></li>
