--- a/des157a/index.html
+++ b/des157a/index.html
@@ -28,38 +28,30 @@
     </div>
 
 </header>
-<main >
-    <section class="container">
-        <section>
-         <h3>Studios</h3>
-         <nav>
-         <ul>
+<main>
+    <section >
+        <h3>Studios</h3>
+        <ul>
         <li><a href="#">Learning Journal</a></li>
         <li><a href="#">Mad Libs 2.0</a></li>
        <li><a href="#">Every Picture</a></li>
         <li><a href="#">Game On!</a></li>
         </ul>
-        <h3>Experiments</h3>
+            <h3 >Experiments</h3>
         <ul>
             <li><a href="#">Exp1</a></li>
         </ul>
-    </nav>
-</nav>
         <h3>Writing</h3>
-        <nav>
-            <ul>
+        <ul>
         <li><a href="">Journal</a></li>
         </ul>
-        </nav>
-
     </section>
 
-   <section class="container">
-        <!--- Research & Development --> 
-       
-            <nav>
-                <ul>
-                    <h3>Research & Development</h3>
+
+   <section >
+    <h3>Research & Development</h3>
+        <!--- Research & Development -->
+        <ul>
             <li><a href="#">Project Brief</a></li>
             <li><a href="#">Digital Comp</a></li>
             <li><a href="#">Refined Comp</a></li>
@@ -67,21 +59,20 @@
             <li><a href="#">User Test</a></li>
             <li><a href="#">User Test Results</a></li>
         </ul>
-            </nav>
         
     </section>
-<section class="container">
-   <nav>
+
+   
+<section ">
+    <h3 >Final</h3>
     <!--- Final --> 
-   <h3>Final</h3>
    <ul>
-    <nav>
+ 
    <li><a href="#">Final Project</a></li>
    </ul>
-   </nav>
+
 </section>
 </main>
-
 
 <footer>
     <a href="https://validator.w3.org/check?uri=https://irisxie.github.io/des157a">Valid HTML 5</a>
