--- a/des157a/index.html
+++ b/des157a/index.html
@@ -39,7 +39,8 @@
         </ul>
             <h3 >Experiments</h3>
         <ul>
-            <li><a href="#">Exp1</a></li>
+            <li><a href="https://irisxie.github.io/des157a/exp/exp1.html">Exp1</a></li>
+            <li><a href="https://irisxie.github.io/des157a/exp/exp2.html">Exp2</a></li>
         </ul>
         <h3>Writing</h3>
         <ul>
