--- a/des157a/exp/exp2.html
+++ b/des157a/exp/exp2.html
@@ -20,7 +20,9 @@
         var favColor = prompt("Type in the word 'red'", "");
 
         document.body.style.backgroundColor = "red";
+    
 
+        console.log();
 
     </script>
 </body>
