learning journal content

--- a/des157a/index.html
+++ b/des157a/index.html
@@ -44,7 +44,7 @@
         </ul>
         <h3>Writing</h3>
         <ul>
-        <li><a href="">Journal</a></li>
+        <li><a href="lj/index.html">Journal</a></li>
         </ul>
     </section>
 
