--- a/des157a/lj/index.html
+++ b/des157a/lj/index.html
@@ -29,19 +29,19 @@
  
     <section class="paragraph">
         <img src="img/sketch.jpg" alt="Learning Journal Sketch">
-        <p class="paragraph">
+        <p>
             The article "Best practices for form design" by Salim Ansari was a very interesting article for me. While I enjoy filling out forms and often have very strong feelings because they are often not gender inclusive and use only he/him and she/her pronouns as options, I was not aware of how many other considerations were worth considering while designing forms. There were also several points, that while I knew from my own personal user experience of using forms, I was grateful to read those observations in more detail and see advice given for best practices regarding designing them, and will use them when designing my forms in the future.
         </p>
-        <p class="paragraph">
+        <p>
             There were multiple aspects of the article that were quite interesting to me. One is the delineation of the one column layout, and that it is faster to process than multiple column forms. Ansari also articulates that the short and logical related fields like City, State, and Zip could be presented on the same row, which makes sense and requires a deeper understanding of understanding the viewport experience. He does state that for mobile devices, due to smaller screens, you could consider seperate rows.
         </p>
-        <p class="paragraph">
+        <p >
             One thing that I found very relevant for inclusive design is the advice for "Be careful with default values." The fact an airline pre-populated his name with the wrong name turns what seems like a thoughtful convenience into a disaster, because TSA is notoriously aggressive to those whose identification differs from their ID, which especially affects transgender people, resulting in potentially traumatizing customer experiences. Ansari points out that it is important to have very good user research before applying default values, and I rarely see default values used anymore, and if it is, it requires a more involved process to change the information.
         </p>
-        <p class="paragraph">
+        <p>
             An example is Amazon defaulting to the last shipping address and name listed, and requiring you to click on a button and to go through a list of addresses to make sure you have the correct one. While a little more arduous for the user, the friction makes sure that the address is correct, and reduces customer frustration and the chance that it will be sent to the wrong address or person.
         </p>
-        <p class="paragraph">A form that I like is <a href="https://give.ucdavis.edu/Donate/YourGift/LGBT101">the Donation form to the UC Davis LGBTQIA Resource Center. </a> It prioritizes the donor message, gift, and has very clearly delineated category types such as "recurring" or "one time." The next form then has all of your personal information, and the information hierarchy helps so that it is not too much information to process and input all at once, which reduces errors.</p>
+        <p>A form that I like is <a href="https://give.ucdavis.edu/Donate/YourGift/LGBT101">the Donation form to the UC Davis LGBTQIA Resource Center. </a> It prioritizes the donor message, gift, and has very clearly delineated category types such as "recurring" or "one time." The next form then has all of your personal information, and the information hierarchy helps so that it is not too much information to process and input all at once, which reduces errors.</p>
 
     </section>
 </main>
